--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,64 +1,69 @@
-.header {
-	background: transparent;
-	display: flex;
-	height: 4.8rem;
+.nav {
 	width: 90%;
 	margin: auto;
+	display: flex;
+	justify-content: space-between;
 	align-items: center;
-	padding-top: 3.5rem;
-	padding-bottom: 3.5rem;
 
-	.logoContainer {
-		display: flex;
+	.logo {
 		flex: 1;
-		width: 7rem;
-		height: 7rem;
-	}
-
-	nav {
-		flex: 2;
-
-		ul {
-			display: flex;
-			justify-content: space-around;
-			list-style: none;
-
-			li {
-				a {
-					color: var(--black);
-					font-size: large;
-					text-decoration: none;
-				}
-
-				a:hover {
-					text-decoration: underline;
-					text-decoration-color: var(--yellow-two);
-				}
-			}
+		img {
+			width: 6rem;
+			height: 6rem;
 		}
 	}
 
-	.githubIcon {
+	ul {
 		display: flex;
-		flex: 1;
-		width: 2.5rem;
-		height: 2.5rem;
-		justify-content: flex-end;
-		padding-right: 1rem;
-		filter: drop-shadow(0px 1px 1px var(--yellow-two));
+		justify-content: space-around;
+		align-items: center;
+
+		li {
+			list-style: none;
+			padding-left: 2rem;
+
+			a {
+				text-transform: uppercase;
+				text-decoration: none;
+				color: var(--black);
+
+				img {
+					width: 2.5rem;
+					height: 2.5rem;
+					filter: drop-shadow(0px 2px 2px var(--yellow));
+				}
+			}
+
+			a:hover {
+				display: inline;
+				text-decoration: none;
+				background-image: linear-gradient(transparent, transparent),
+					linear-gradient(transparent, transparent),
+					linear-gradient(to left, var(--yellow), var(--black));
+				background-repeat: no-repeat;
+				background-position: 120%, 122%, 0 130%;
+				background-size: 100% 6px;
+			}
+		}
+
+		.firstIcon {
+			padding-left: 5rem;
+		}
+
+		.lastIcon {
+			margin-left: 1rem;
+			padding-left: 0rem;
+		}
 	}
 
-	.icons {
-		display: flex;
-		flex: 1;
-		justify-content: flex-end;
-		padding-right: 1rem;
-		img {
-			margin-left: 0.5rem;
-			width: 2.5rem;
-			height: 2.5rem;
-			-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-			filter: grayscale(100%) drop-shadow(0px 1px 1px var(--yellow-two));
+	.burger {
+		display: none;
+
+		div {
+			width: 25px;
+			height: 3px;
+			margin: 5px;
+			background-color: var(--yellow-two);
 		}
 	}
 }
