--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -24,7 +24,7 @@
 		}
 
 		.cta {
-			padding: 3.125rem 0 0;
+			padding: 2rem 0 2rem;
 
 			button {
 				border: 2px solid var(--yellow);
@@ -44,11 +44,69 @@
 	}
 
 	.cover {
+		flex: 1;
+		text-align: right;
+
 		img {
 			border-radius: 80%;
-			height: 80%;
-			width: 29.325rem;
+			width: 70%;
 			filter: drop-shadow(0px 3px 3px var(--yellow-two));
+		}
+	}
+}
+
+@media screen and (max-width: 1024px) {
+	.presentation {
+		flex-direction: column;
+
+		.introduction {
+			margin-top: 1.131;
+			text-align: center;
+
+			.introText {
+				h1 {
+					font-size: 1.875rem;
+				}
+
+				p {
+					font-size: 1.125rem;
+				}
+			}
+		}
+
+		.cover {
+			text-align: center;
+			img {
+				width: 50%;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 810px) {
+	.presentation {
+		.cover {
+			flex: 2;
+			img {
+				width: 70%;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 414px) {
+	.presentation {
+		.introduction {
+			.cta {
+				padding: 2rem 0 1rem;
+			}
+		}
+
+		.cover {
+			flex: 3;
+			img {
+				width: 80%;
+			}
 		}
 	}
 }
