--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,6 +17,18 @@ body {
 	background: var(--white);
 }
 
+body::-webkit-scrollbar {
+	width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+	background: var(--black);
+}
+
+body::-webkit-scrollbar-thumb {
+	background: var(--yellow);
+}
+
 body,
 input,
 textarea,
