--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -30,11 +30,14 @@
 				img {
 					width: 2.5rem;
 					height: 2.5rem;
+				}
+
+				img:hover {
 					filter: drop-shadow(0px 2px 2px var(--yellow));
 				}
 			}
 
-			a:hover {
+			.textNav:hover {
 				display: inline;
 				text-decoration: none;
 				background-image: linear-gradient(transparent, transparent),
